# langchain-whatsapp-python-bot-starter

./: docker-compose.prod.yml
services/api/: Dockerfile  pyproject.toml  req.old  requirements.txt  run.py
services/api/src/app/: exceptions.py  main.py  routes.py
services/api/src/app/services/: ping.py
services/api/src/logging/: logger.py
services/traefik/: traefik.prod.toml
