[tool.poetry]
name = "langchain-whatsapp-python-bot-starter"
version = "0.1.0"
description = ""
authors = ["ruben<ruben@gptbuilds.io>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
langchain = "^0.1.20"
langchainhub = "^0.1.15"
openai = "^1.28.1"
langchain-openai = "^0.1.6"
pywa = "^1.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
